force-app/main/default/objects/CLQ_Room_Space_Inspection__c/CLQ_Room_Space_Inspection__c.object-meta.xml
<CustomObject>
    <description>Junction object between Room/Space and Inspection</description>
    <label>Room/Space Inspection</label>
    <nameField>
        <label>Room/Space Inspection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms/Space Inspection</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>