force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/Check_Test__c.field-meta.xml
<CustomField>
    <fullName>Check_Test__c</fullName>
    <label>Check Test</label>
    <length>18</length>
    <type>Text</type>
</CustomField>