force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Additional_Width_Feet__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Additional_Width_Feet__c</fullName>
    <label>Additional Width Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>