force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Approved_for_under_2_1_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approved_for_under_2_1_2__c</fullName>
    <label>Approved for under 2 1/2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>