force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Building_Limitation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Building_Limitation__c</fullName>
    <label>Are there any Building Limitations?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>