force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Building_Limitation_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Building_Limitation_Comments__c</fullName>
    <label>Building Limitation Comments</label>
    <type>TextArea</type>
</CustomField>