force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Calc_Nb_of_Child_Allowed_Indoor__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Calc_Nb_of_Child_Allowed_Indoor__c</fullName>
    <formula>IF( 
AND(ISPICKVAL(CLQ_Room_Space_Shape__c ,&quot;Square/Rectangle/L-Shaped&quot;),RecordType.Name = &apos;Indoor Room/Space&apos;),FLOOR(CLQ_Square_Footage__c / 35), 
IF( 
AND(ISPICKVAL(CLQ_Room_Space_Shape__c ,&quot;Irregular&quot;),RecordType.Name = &apos;Indoor Room/Space&apos;),FLOOR(CLQ_Square_Footage_Irregular__c / 35),0 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Number of Children Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>