force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Currently_In_Use__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Currently_In_Use__c</fullName>
    <label>In Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>