force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection__c</fullName>
    <label>Inspection</label>
    <referenceTo>CLQ_Inspection__c</referenceTo>
    <relationshipLabel>Rooms/Space Inspection</relationshipLabel>
    <relationshipName>Rooms_Space_Inspection</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>