force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Length2_Inches__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Length2_Inches__c</fullName>
    <label>Length2 Inches</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>