force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Number_of_Children_Allowed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Number_of_Children_Allowed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Max. Number of Children Allowed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>