force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Program__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>CLQ_Program__c</referenceTo>
    <relationshipName>Rooms_Spaces_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>