force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Room_Group_Information__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Room_Group_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room/Group Information</label>
    <referenceTo>CLQ_Room_Space__c</referenceTo>
    <relationshipLabel>Rooms/Space Inspection</relationshipLabel>
    <relationshipName>Rooms_Space_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>