force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Room_Space_Shape__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Room_Space_Shape__c</fullName>
    <label>Room/Space Shape</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Irregular</fullName>
            </value>
            <value>
                <fullName>Square/Rectangle/L-Shaped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>