force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Square_Footage_Irregular__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Square_Footage_Irregular__c</fullName>
    <label>Square Footage Irregular</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>