force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Street_Address_2__c</fullName>
    <formula>CLQ_Program__r.CLQ_Street_Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Address 2</label>
    <type>Text</type>
</CustomField>