force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/CLQ_Used_by_Under_or_Over_2_1_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Used_by_Under_or_Over_2_1_2__c</fullName>
    <label>Used by Under or Over 2 1/2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under</fullName>
            </value>
            <value>
                <fullName>Over</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>