force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/Final_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Final_Square_Footage__c</fullName>
    <description>[Forms &amp; Reports]: Created to get final Area.</description>
    <formula>IF(  ISPICKVAL(CLQ_Room_Space_Shape__c, &quot;Irregular&quot;), CLQ_Square_Footage_Irregular__c , CLQ_Square_Footage__c )</formula>
    <label>Final Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>