force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/RSI_Mobile_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>RSI_Mobile_Record_Type__c</fullName>
    <description>[Ramana, 8/29/2017]: Created for bug# 11565 to handle new Room/Space inspection records from Mobile app. This field will be updated only in Mobile app.</description>
    <label>RSI Mobile Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indoor Room/Space</fullName>
            </value>
            <value>
                <fullName>Outdoor Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>