force-app/main/default/objects/CLQ_Room_Space_Inspection__c/fields/Test_Check__c.field-meta.xml
<CustomField>
    <fullName>Test_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testing for TFS # 11180</description>
    <label>Test Check</label>
    <type>Checkbox</type>
</CustomField>