force-app/main/default/objects/CLQ_Room_Space_Inspection__c/validationRules/CLQ_Building_Limitation_Comments_Require.validationRule-meta.xml
<ValidationRule>
    <fullName>CLQ_Building_Limitation_Comments_Require</fullName>
    <active>true</active>
    <description>When building limitation is checked the comments are required.</description>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; AND(TEXT(CLQ_Building_Limitation__c)=&apos;Yes&apos;,ISBLANK( CLQ_Building_Limitation_Comments__c))</errorConditionFormula>
    <errorDisplayField>CLQ_Building_Limitation_Comments__c</errorDisplayField>
    <errorMessage>Building limitation Comments are required.</errorMessage>
</ValidationRule>