force-app/main/default/objects/CLQ_Room_Space_Inspection__c/validationRules/CLQ_Max_Children_Less_than_Cal_Children.validationRule-meta.xml
<ValidationRule>
    <fullName>CLQ_Max_Children_Less_than_Cal_Children</fullName>
    <active>true</active>
    <description>For Indoor Room/Space record type</description>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; AND( RecordType.Name = &apos;Indoor Room/Space&apos;,(CLQ_Number_of_Children_Allowed__c &gt; CLQ_Calc_Nb_of_Child_Allowed_Indoor__c))</errorConditionFormula>
    <errorDisplayField>CLQ_Number_of_Children_Allowed__c</errorDisplayField>
    <errorMessage>Number of Children Allowed cannot be greater than Calculated Number of Children Allowed</errorMessage>
</ValidationRule>